# Iso-211001-turismo

./: .gitignore  .mcp.json  ACTIVIDADES.md  AGENTS.md  CLAUDE.md  DESIGN.md  FELIPE_REAL.md  README.md  package-lock.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: security.py  supabase.py
backend/app/core/ai/: factory.py  (+2 more)
backend/tests/: conftest.py
backend/tests/auth/: test_auth.py  test_rls_integration.py
backend/tests/core/: test_ai_provider.py
backend/tests/generation/: conftest.py  test_acciones_correctivas.py  test_acta_compromiso.py  test_alcance.py  test_auditoria_interna.py  test_control_documental.py  test_control_operacional.py  test_emergency_and_incident.py  test_generation_endpoint.py  test_generators.py  test_matriz_indicadores.py  test_new_documents.py  test_objetivos_seguridad.py  test_partes_interesadas.py  test_pending_labels.py  test_procedimiento_requisitos_legales.py  test_procedimiento_riesgos.py  test_procedimiento_seleccion_personal.py  test_requisitos_legales.py  test_revision_direccion.py  test_risk_matrix.py  test_sequence_gate_integration.py
backend/tests/inventory/: test_inventory.py
backend/tests/onboarding/: conftest.py  test_chat_persistence.py  test_chat_steps.py  test_onboarding.py  test_onboarding_chat.py  test_remediation_merge.py  test_roadmap.py  test_sequence_gate.py
backend/tests/quality/: test_quality_endpoint.py  test_readiness.py  test_remediation.py
backend/tests/salidas/: test_consentimiento.py  test_rls_salidas.py  test_salidas.py  test_terreno.py
(+264 files in other folders)
