[project]
name = "coladventure-backend"
version = "0.1.0"
description = "Backend FastAPI de ColAdventure — cumplimiento NTC-ISO 21101"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "supabase>=2.7",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "email-validator>=2.2",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "google-genai>=0.3",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends()/Security() en argumentos por defecto es el idiom de FastAPI.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
